# construct-tui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.githooks/: commit-msg
.github/workflows/: ci.yml
scripts/: install-hooks.sh
src/: app.rs  auth.rs  bridge.rs  engine_adapter.rs  main.rs  orchestrator_task.rs  storage.rs  streaming.rs  tui.rs
src/config/: mod.rs
src/grpc/: channel.rs  client.rs  mod.rs
src/screens/: chat_list.rs  chat_view.rs  connection_status.rs  contact_search.rs  device_link.rs  mod.rs  onboarding.rs  qr_widget.rs  registration.rs  safety_number.rs  settings.rs  unlock.rs
