[package]
name = "construct-tui"
version = "0.1.0"
edition = "2024"

[features]
# obfs4 DPI-bypass transport via construct-ice (optional — not needed on uncensored networks)
ice = ["dep:construct-ice"]
# Post-quantum (Kyber-768 PQXDH) — disable on RPi Zero / low-memory ARM
post-quantum = ["construct-core/post-quantum"]

[dependencies]
construct-core = { path = "../construct-core", features = ["desktop"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tokio-stream = "0.1"
async-stream = "0.3"
anyhow = "1"
futures = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# gRPC / proto
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
prost = "0.13"

# Config & storage
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Session encryption at-rest
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
zeroize = { version = "1", features = ["std"] }

# Message storage — SQLCipher provides AES-256 page-level encryption.
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# Key derivation domain separation
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
ed25519-dalek = { version = "2.0", features = ["std", "rand_core"] }
base64 = "0.22.1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

# Optional ICE (obfs4) DPI-bypass transport
construct-ice = { path = "../construct-ice", optional = true, features = ["tonic-transport"] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = "s"          # size over speed — fits RPi SD cards
lto = true               # link-time optimisation (reduces binary size + improves perf)
codegen-units = 1        # single CGU for best LTO
strip = true             # strip symbols — saves ~2–4 MB
panic = "abort"          # no unwinding machinery

# PQ-enabled release build — same as release but with Kyber-768 PQXDH.
# Use when the device is powerful enough (RPi 3B+ and above are fine).
# Build: cargo build --profile release-pq --features post-quantum
[profile.release-pq]
inherits = "release"

