[package]
name = "construct-tui"
version = "0.1.5"
edition = "2024"

[[bin]]
name = "konstrukt"
path = "src/main.rs"

[features]
ice = ["construct-ice"]
post-quantum = ["construct-core/post-quantum"]

[dependencies]
construct-core = { path = "../construct-core", features = ["desktop"] }
construct-ice = { path = "../construct-ice", optional = true, features = ["tonic-transport"] }
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tokio-stream = "0.1"
async-stream = "0.3"
anyhow = "1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }

# gRPC / proto
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
prost = "0.14"
tonic-prost = "0.14"

# Config & storage
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Session encryption at-rest
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
zeroize = { version = "1", features = ["std"] }

# Message storage — SQLCipher
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# TLS/encryption backend for rustls
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Key derivation domain separation
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
ed25519-dalek = { version = "2.0", features = ["std", "rand_core"] }
base64 = "0.22.1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
signature = "2"
qrcode = { version = "0.14", default-features = false }

[build-dependencies]
prost-build = "0.14"
tonic-prost-build = "0.14"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-pq]
inherits = "release"
